--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
                 <label for="username">用户名</label>
                 <input class="form-styling" type="text" name="username" placeholder=""/>
                 <label for="password">密码</label>
-                <input class="form-styling" type="text" name="password" placeholder=""/>
+                <input class="form-styling" type="password" name="password" placeholder=""/>
                 <input type="checkbox" id="checkbox"/>
                 <label for="checkbox" ><span class="ui"></span>记住密码</label>
                 <div class="btn-animate">
@@ -40,9 +40,9 @@
                 <label for="email">邮箱</label>
                 <input class="form-styling" type="text" name="email" placeholder=""/>
                 <label for="password">密码</label>
-                <input class="form-styling" type="text" name="password" placeholder=""/>
+                <input class="form-styling" type="password" name="password" placeholder=""/>
                 <label for="confirmpassword">确认密码</label>
-                <input class="form-styling" type="text" name="confirmpassword" placeholder=""/>
+                <input class="form-styling" type="password" name="confirmpassword" placeholder=""/>
                 <a ng-click="checked = !checked" class="btn-signup">注册</a>
                               </form>
             
@@ -67,7 +67,7 @@
               <div class="cover-photo"></div>
               <div class="profile-photo"></div>
               <h1 class="welcome">欢迎</h1>
-              <a class="btn-goback" value="Refresh" href="../build/index.html">继续</a>
+              <a class="btn-goback" value="Refresh" href="http://localhost:3000">继续</a>
             </div>
         </div>
           
