添加登录功能

--- a/login/login.html
+++ b/login/login.html
@@ -23,9 +23,9 @@
                 margin-right: auto; text-align: center;width:80%;position:relative; top:30px;"></div> -->
                               <form class="form-signin" action="" method="post" name="form">
                 <label for="username">用户名</label>
-                <input class="form-styling" type="text" name="username" placeholder=""/>
+                <input id="username" class="form-styling" type="text" name="username" placeholder=""/>
                 <label for="password">密码</label>
-                <input class="form-styling" type="password" name="password" placeholder=""/>
+                <input id="password" class="form-styling" type="password" name="password" placeholder=""/>
                 <input type="checkbox" id="checkbox"/>
                 <label for="checkbox" ><span class="ui"></span>记住密码</label>
                 <div class="btn-animate">
@@ -67,7 +67,7 @@
               <div class="cover-photo"></div>
               <div class="profile-photo"></div>
               <h1 class="welcome">欢迎</h1>
-              <a class="btn-goback" value="Refresh" href="http://localhost:3000">继续</a>
+              <a class="btn-goback" value="Refresh" href="../build/index.html">继续</a>
             </div>
         </div>
           
